<resources>
    <string name="app_name">My Application in class</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="logo">Logo</string>
    <string name="username">Username</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="log_in">LOG IN</string>
    <string name="passwords">Password</string>
</resources>